@@ -1,6 +1,7 @@
 ==== 2.5.1.dev0 ====
     * Running on MS Windows fix
     * UTF-8 HTTP Digest username support
+    * JSONResponse support all response type now (data argument)
 
 ==== 2.5.0 ====
     * fix file callback on files smaller than 1000B
